src/objects/cds_obj_Sanction__c.object
<CustomObject>
    <fields>
        <fullName>CourtAppearance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Court appearance</label>
        <referenceTo>cds_obj_CourtAppearances__c</referenceTo>
        <relationshipLabel>sanctions</relationshipLabel>
        <relationshipName>sanctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sanction_date__c</fullName>
        <label>sanction date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sanction_type__c</fullName>
        <label>sanction type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>text1</fullName>
                </value>
                <value>
                    <fullName>text2</fullName>
                </value>
                <value>
                    <fullName>text3</fullName>
                </value>
                <value>
                    <fullName>text4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>sanction</label>
    <nameField>
        <label>sanction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sanctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>